--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,4 @@
-name: Jacky Zhao
+name: Ivan
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -11,8 +11,8 @@ enableFooter: true
 enableContextualBacklinks: true
 enableRecentNotes: false
 enableGitHubEdit: true
-enableMermaid: true
-GitHubLink: https://github.com/jackyzha0/quartz/tree/hugo/content
+enableMermaid: false
+GitHubLink: 
 search:
   enableSemanticSearch: false
   operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
@@ -21,9 +21,9 @@ description:
   Host your second brain and digital garden for free. Quartz features extremely fast full-text search,
   Wikilink support, backlinks, local graph, tags, and link previews.
 page_title:
-  "🪴 Quartz 3.3"
+  "TTRPG CAMPAIGN TRACKER"
 links:
   - link_name: Twitter
-    link: https://twitter.com/_jzhao
+    link: 
   - link_name: GitHub
-    link: https://github.com/jackyzha0
+    link: 
