--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://kramaricivan.github.io./quartz/"
+baseURL = "https://kramaricivan.github.io./TTRP-Tracker/"
 languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
